--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,3 +16,26 @@ blocks:
             - cache restore
             - pip install --cache-dir .pip_cache -r requirements.txt
             - cache store
+  - name: Test
+    task:
+      prologue:
+        commands:
+          - sem-version python 3.8
+          - checkout
+          - cache restore
+          - pip install --cache-dir .pip_cache -r requirements.txt
+      jobs:
+        - name: Unit tests
+          commands:
+            - cd netmanage
+            - python manage.py makemigrations
+            - python manage.py migrate
+            - python manage.py test
+        - name: Checklist
+          commands:
+            - cd netmanage
+            - python manage.py check --deploy
+        - name: Style check
+          commands:
+            - pip install flake8
+            - flake8 netmanage/ --max-line-length=127
