--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,3 +16,22 @@ blocks:
             - cache restore
             - pip install --cache-dir .pip_cache -r requirements.txt
             - cache store
+  - name: 'Block #2'
+    task:
+      prologue:
+        commands:
+          - sem-version python 3.8
+          - checkout
+          - cache restore
+          - pip install --cache-dir .pip_cache -r requirements.txt
+      jobs:
+        - name: Unit tests
+          commands:
+            - cd netmanage
+            - python manage.py makemigrations
+            - python manage.py migrate
+            - python manage.py test netapp.tests.test_dryrun
+        - name: Checklist
+          commands:
+            - cd netmanage
+            - python manage.py check --deploy
